Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -147,18 +147,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "def find_derivative(function_terms):\n",
     "    derivative=list(map(lambda function_term:find_term_derivative(function_term),function_terms))\n",
-    "    return list(filter(lambda derivative: derivative[0] != 0, derivative))\n"
+    "    return list(filter(lambda derivative: derivative[0] , derivative))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +167,7 @@
        "[(12, 2), (-3, 0)]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
