--- a/index.ipynb
+++ b/index.ipynb
@@ -153,7 +153,7 @@
    "source": [
     "def find_derivative(function_terms):\n",
     "    derivative=list(map(lambda function_term:find_term_derivative(function_term),function_terms))\n",
-    "    return list(filter(lambda derivative: derivative[0] , derivative))\n"
+    "    return list(filter(lambda derivative: derivative[0] != 0, derivative))\n"
    ]
   },
   {
