--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -147,13 +147,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "def find_derivative(function_terms):\n",
     "    derivative=list(map(lambda function_term:find_term_derivative(function_term),function_terms))\n",
-    "    return list(filter(lambda derivative: derivative[0] , derivative))\n"
+    "    return list(filter(lambda derivative: derivative[0] != 0, derivative))\n"
    ]
   },
   {
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +195,7 @@
        "[(6, 1)]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
